# alax-ssh-manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  security.yml
docs/: completion-report.md  database-design.md  feature-audit.md  milestones.md  module-design.md  phase-1-file-list.md  technical-plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/elevated_sftp/: mod.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/tunnel/: mod.rs
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx
src/file-manager/: remote-file-manager.tsx
src/hooks/: use-theme.ts
src/layout/: app-shell.tsx  status-bar.tsx  top-bar.tsx
src/lib/: tauri.ts  utils.ts
src/monitor/: monitor-panel.tsx
src/server/: group-editor.tsx  server-editor.tsx  server-panel.tsx
src/settings/: settings-panel.tsx
src/stores/: app-store.ts
src/terminal/: terminal-registry.ts  terminal-tabs.tsx
src/transfer/: transfer-panel.tsx
src/tunnel/: tunnel-panel.tsx
src/types/: app.ts
