[package]
name = "alax-ssh-manager"
version = "0.5.4"
description = "ALAX SSH Manager desktop app"
authors = ["ALAX"]
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "alax_ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
keyring = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
russh = { version = "0.62", default-features = false, features = ["ring", "flate2"] }
russh-sftp = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
rfd = { version = "0.15", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
